# yumedisk

./: .gitignore  LICENSE  README.md
cache/: Cargo.toml  cache-SDK文档.md
cache/src/: cache.rs  cache_p2_tests.rs  config.rs  deps.rs  error.rs  io.rs  lib.rs  temp.rs
dev/MyApp3/: CMakeLists.txt  main.cpp
dev/MyApp4/: .gitignore  CMakeLists.txt  main.cpp
dev/MyDisk1/: .gitignore  MyDisk1.sln
dev/MyDisk2/: .gitignore  MyDisk2.sln
dev/MyDriver3/: .gitignore  MyDriver3.sln
dev/MyKWDF3/: .gitignore  MyKWDF3.sln
docs/: Element-Plus-UI规范提示词.md  README.md  Windows驱动问题排查笔记.md  development-principles.md  tauri-client-ui-design.md  workflow.md  功能文档.md  开发文档.md  技术文档.md  项目概述.md
docs/architecture/: 功能文档.md  技术文档.md  项目概述.md
docs/cache/: README.md  cache-strategy.md  components.md  logic-policies.md  usage-model.md
docs/client/: README.md
docs/development/: development-principles.md  joint-debugging-environment.md  workflow.md  开发文档.md
docs/network/: README.md  client-gateway.md  gateway-storer.md  transport.md
docs/network-disk-go-server/: README.md  auth-routing.md  client-and-gateway.md  data-plane.md  gateway-and-storer.md  overview.md  transport.md
docs/old_dev/: MyApp1.md  MyApp2.md  MyApp3.md  MyApp4.md  MyDisk1.md  MyDisk2.md  MyDriver1.md  MyDriver2.md  MyDriver3.md  MyDriver4.md  MyKWDF1.md  MyKWDF3.md
docs/progress/: 2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-23.md  2026-05-28.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  README.md
docs/server/: README.md
docs/tmp/: app-owned-media-queue-protocol-design.md  app-owned-media-queue-todo.md  appkernel-layering-draft.md  backend-dll-boundary-draft.md  kmdf-kernel-cpu-reduction-draft.md  miniport-optimization-review.md  network-media-cache-draft.md  per-disk-throughput-recovery-draft.md  todo-UA.md  todo-UEO.md  todo-cache.md  todo-close.md  todo-eject.md  todo-network-compression.md  todo-reconstruction.md  todo-rust-cli.md  todo-scsi-queue.md  todo-server.md  todo-tauri-client.md  todo-test-socket.md  todo-test.md  todo-verify.md  todo.md  yumedisk-data-path-overview.md  宣传草案.md  讨论.txt  逐字稿.txt
docs/troubleshooting/: Windows驱动问题排查笔记.md
docs/ui/: tauri-client-element-grounding-notes.md  tauri-client-ui-design.md  tauri-client-ui-guidelines.md
server/: go.mod
shared/: yumedisk_proto.h
tests/: README.md  uia_scenario.ps1  uia_test.ps1  uia_test_gbk.ps1
tools/: clean_pcap_heartbeats.py
windows/AppKernel/: AppKernel-SDK文档.md  AppKernel设计文档.md  CMakeLists.txt
windows/AppKernel/include/: appkernel.h
windows/AppKernel/src/: appkernel.c
windows/AppKernel/src/common/: ak_internal.h  ak_memory.c  ak_status.c
windows/AppKernel/src/disk/: ak_disk.c  ak_disk.h
windows/AppKernel/src/event/: ak_event.c  ak_event.h
windows/AppKernel/src/protocol/: ak_protocol.c  ak_protocol.h
windows/AppKernel/src/session/: ak_session.c  ak_session.h
windows/BackendCore/: BackendCore-SDK文档.md  CMakeLists.txt
windows/BackendCore/BackendCore/: BackendCore.h
windows/BackendCore/StagingStore/: StagingStore.cpp  StagingStore.h
windows/BackendCore/config/: config.cpp  config.h
windows/BackendCore/media/: media.cpp  media.h
windows/BackendCore/media/Media/: Media.h
windows/BackendCore/runtime/: runtime.cpp  runtime.h  runtimeDisk.h
windows/BackendCore/types/: types.h
windows/BackendRust/: AGENTS.md  BackendRust-SDK文档.md  Cargo.toml  README.md  build.rs
windows/MyApp5/: CMakeLists.txt  main.cpp
windows/MyApp5/utils/: utils.cpp
windows/TestApp/: CMakeLists.txt
windows/TestApp/src/: config.cpp  config.h  main.cpp  media.cpp  media.h  runtime.cpp  runtime.h  scan.cpp  scan.h  types.h
windows/YumeDiskKMDF/: YumeDiskKMDF.sln
windows/YumeDiskSCSI/: YumeDiskSCSI.sln
windows/client/: AGENTS.md  CMakeLists.txt  client_backend.cpp  client_backend.h  main.cpp  widget.cpp  widget.h  widget.ui
windows/client/CreateDiskDialog/: CreateDiskDialog.cpp  CreateDiskDialog.h  CreateDiskDialog.ui
windows/client/Widget/: Widget.cpp  Widget.h  Widget.ui
windows/client/backend/: Backend.cpp  Backend.h  backend.cpp  backend.h  config.cpp  config.h  media.cpp  media.h  runtime.cpp  runtime.h
windows/client/backend/StagingStore/: StagingStore.cpp  StagingStore.h
windows/client/backend/config/: config.cpp  config.h
windows/client/backend/media/: media.cpp  media.h
windows/client/backend/media/FileMedia/: FileMedia.cpp  FileMedia.h
windows/client/backend/media/Media/: Media.h
windows/client/backend/media/MemoryMedia/: MemoryMedia.cpp  MemoryMedia.h
windows/client/backend/media/RawFileMedia/: RawFileMedia.cpp  RawFileMedia.h
windows/client/backend/runtime/: runtime.cpp  runtime.h
windows/client/backend/types/: types.h
windows/client/backendHost/BackendHost/: BackendHost.cpp  BackendHost.h
windows/client/createDiskDialog/: createDiskDialog.cpp  createDiskDialog.h
windows/client/media/FileMedia/: FileMedia.cpp  FileMedia.h
windows/client/media/MemoryMedia/: MemoryMedia.cpp  MemoryMedia.h
windows/client/media/RawFileMedia/: RawFileMedia.cpp  RawFileMedia.h
windows/client/widget/: widget.cpp  widget.h  widget.ui
windows/devtidy/: CMakeLists.txt  OUTPUT.md  certificate_store.cpp  certificate_store.h  common.cpp  common.h  device_ops.cpp  device_ops.h  main.cpp  package.cpp  package.h  workflow.cpp  workflow.h
windows/qt-client/: AGENTS.md  CMakeLists.txt
windows/qt-client/CreateDiskDialog/: CreateDiskDialog.cpp  CreateDiskDialog.ui
windows/qt-client/Widget/: Widget.cpp  Widget.ui
windows/qt-client/backendHost/BackendHost/: BackendHost.cpp  BackendHost.h
windows/qt-client/media/FileMedia/: FileMedia.cpp
windows/qt-client/media/MemoryMedia/: MemoryMedia.cpp
windows/qt-client/media/RawFileMedia/: RawFileMedia.cpp  RawFileMedia.h
windows/scan/: CMakeLists.txt  scan.cpp  scan.h
windows/tests/RWTestApp/: CMakeLists.txt  main.cpp
windows/tests/scsi_ua_probe/: CMakeLists.txt  README.md  main.c
(+417 files in other folders)
